k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: busroad-backend
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: busroad-api.kavanasystems.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: busroad-backend
                port:
                  number: 80
